--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 </p>
 
                 <form
-                  action="https://formsubmit.co/4c62ffa170d1999c3483ad5e91c83164"
+                  action="https://formsubmit.co/haileyvillechristianchurch@gmail.com"
                   class="appoin-form"
                   method="POST"
                 >
@@ -459,7 +459,7 @@
                     <input
                       type="hidden"
                       name="_next"
-                      value="https://duggerosuit.github.io/TestSite/thanks.html"
+                      value="https://haileyvillechristianchurch.com/thanks.html"
                     />
                     <input
                       type="hidden"
